layout breaking fix

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -17893,7 +17893,7 @@ input[type=radio].inline {
   padding: 0;
   margin: 0;
   position: absolute;
-  top: 14px;
+  top: 0px;
   right: 14px;
   background: none;
   border: none;
